# shapley-guided-vae

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run-training-variants.ps1
analysis/: compare_mean_baselines.py  plot_family_comparison.py  plot_latent_distributions.py  plot_training_results.py  show_latent_tuples.py  wine_eda.py
analysis/output/: both_pca_loadings.csv  both_pca_summary.csv  both_pearson_correlation.csv  both_spearman_correlation.csv  both_summary.csv  red_pca_loadings.csv  red_pca_summary.csv  red_pearson_correlation.csv  red_spearman_correlation.csv  red_summary.csv  white_pca_loadings.csv  white_pca_summary.csv  white_pearson_correlation.csv  white_spearman_correlation.csv  white_summary.csv
analysis/output/training_plots_beta040_warm100_beefy/: baseline_duration_history.csv  run_history.csv  run_summary.csv
analysis/output/training_runs/: baseline_duration_history.csv  mean_baseline_comparison.csv  mean_baseline_feature_mse.csv  run_history.csv  run_summary_all.csv
analysis/output/training_runs/baseline-20260514T220441Z-54479881/: callback_timing.csv  feature_difference_summary.csv  history.csv  metadata.json
analysis/output/training_runs/baseline-20260514T224336Z-0a73e9cc/: callback_timing.csv  history.csv  (+2 more)
models/: __init__.py  vae.py
reports/: wine_eda.qmd
shapley/: __init__.py  baselines.py  blocks.py  estimators.py  game.py  masking.py  node_sampler.py  weights.py
training/: __init__.py  callbacks.py  evaluation.py  loss.py  results.py  shapley.py  trainer.py
utils/: __init__.py  data_loader.py
(+22 files in other folders)
