[project]
name = "shapley-guided-vae"
version = "0.1.0"
description = "Proof-of-concept: Shapley-guided VAE"
requires-python = ">=3.11,<3.13"

dependencies = [
  "pandas>=2.0",
  "numpy>=1.25",
  "scikit-learn>=1.3",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "matplotlib>=3.8"
]

[project.optional-dependencies]
cpu = [
  "torch>=2.1"
]
cu121 = [
  "torch>=2.1"
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu121" }
  ]
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cu121" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true